<resources>
    <string name="app_name">Food App</string>
    <string name="fragment_sign_in">Sign In</string>
    <string name="fragment_result">Result</string>
    <string name="fragment_profile">Profile</string>
    <string name="your_bio">A little about yourself...</string>
    <string name="your_city">Your City</string>
    <string name="your_name">Your Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="sign_out">Sign Out</string>
</resources>