<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation_graph"
    app:startDestination="@id/nav_sign_in">

    <action
        android:id="@+id/action_nav_sign_in"
        app:destination="@+id/nav_sign_in"
        app:popUpTo="@+id/app_navigation_graph"
        app:launchSingleTop="true"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_nav_result"
        app:destination="@+id/nav_result"
        app:popUpTo="@+id/app_navigation_graph"
        app:launchSingleTop="true"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/nav_sign_in"
        android:name="com.ob.foodapp.feature.signin.ui.SignInFragment"
        android:label="@string/fragment_sign_in"
        tools:layout="@layout/fragment_sign_in">

        <action
            android:id="@+id/action_nav_sign_in_to_nav_result"
            app:destination="@id/nav_result"
            app:popUpTo="@+id/app_navigation_graph"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_result"
        android:name="com.ob.foodapp.feature.result.ui.ResultFragment"
        android:label="@string/fragment_result"
        tools:layout="@layout/fragment_result">

        <argument
            android:name="user"
            app:argType="com.ob.foodapp.feature.signin.presentation.model.UiUser" />

        <action
            android:id="@+id/action_nav_result_to_nav_profile"
            app:destination="@id/nav_profile" />

    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ob.foodapp.feature.profile.ui.ProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile">

        <argument
            android:name="userId"
            app:argType="string" />

        <action
            android:id="@+id/action_nav_profile_to_nav_sign_in"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_sign_in"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_nav_profile_to_nav_result"
            app:popUpTo="@id/nav_result" />

    </fragment>


</navigation>
