<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDefault">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_margin="20dp"
        android:background="@drawable/oval_placeholder"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/profile_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEditProfileTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:text="@string/edit_your_p"
        android:textAppearance="@style/edit_your_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_horizontal"
        android:text="@string/someuser_gm"
        android:textAppearance="@style/someuser_gm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditProfileTitle" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textbox"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/your_name"
        android:imeOptions="actionNext"
        android:inputType="textAutoCorrect"
        android:maxEms="50"
        android:maxLines="1"
        android:textAppearance="@style/your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileEmail" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/textbox"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/your_city"
        android:imeOptions="actionNext"
        android:inputType="textAutoCorrect"
        android:maxEms="50"
        android:maxLines="1"
        android:textAppearance="@style/your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etBio"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/textbox"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/your_bio"
        android:imeOptions="actionDone"
        android:inputType="textAutoCorrect"
        android:maxEms="50"
        android:maxLines="1"
        android:textAppearance="@style/your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCity" />

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_primary"
        android:fontFamily="@font/poppins_regular"
        android:stateListAnimator="@null"
        android:text="@string/save_profile"
        android:textAppearance="@style/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBio" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_secondary"
        android:fontFamily="@font/poppins_regular"
        android:stateListAnimator="@null"
        android:text="@string/sign_out"
        android:textAppearance="@style/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveProfile" />

    <ProgressBar
        android:id="@+id/pbSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:progressTint="@color/green_tab"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCity" />


</androidx.constraintlayout.widget.ConstraintLayout>